<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    tools:context=".NewTaskActivity">

    <ImageButton
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="592dp"
        android:onClick="onSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/folder" />

    <LinearLayout
        android:id="@+id/newTaskSettingsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:baselineAligned="false"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveTaskButton">

        <LinearLayout
            android:id="@+id/whatTaskLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/whatTaskTextView"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/task_name" />

            <EditText
                android:id="@+id/whatTaskResultTextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whatDefinitionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/whatDefinitionTextView"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/task_definition" />

            <EditText
                android:id="@+id/whatDefinitionResultTextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whatDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/whatDateTextView"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/task_date" />

            <EditText
                android:id="@+id/whatDateResultTextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whatCostLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/whatCostTextView"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/task_cost" />

            <EditText
                android:id="@+id/whatCostResultTextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whatPlaceLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/whatPlaceTextView"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/task_place" />

            <EditText
                android:id="@+id/whatPlaceResultTextView"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@android:drawable/screen_background_light_transparent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="false" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>